# ospx

./: .buildinfo  .coveragerc  .gitignore  .sourcery.yaml  CHANGELOG.html  CHANGELOG.md  CITATION.cff  LICENSE.html  README.html  README.md  STYLEGUIDE.html  STYLEGUIDE.md  api.html  cli.html  cli.importSystemStructure.html  cli.ospCaseBuilder.html  cli.watchCosim.html  fileFormat.caseDict.html  fileFormat.html  fileFormat.watchDict.html  genindex.html  index.html  names.csv  objects.inv  ospx.component.html  ospx.connection.html  ospx.connector.html  ospx.fmi.experiment.html  ospx.fmi.fmu.html  ospx.fmi.html  ospx.fmi.unit.html  ospx.fmi.variable.html  ospx.graph.html  ospx.html  ospx.importer.html  ospx.ospCaseBuilder.html  ospx.ospSimulationCase.html  ospx.simulation.html  ospx.system.html  ospx.systemStructure.html  (+10 more)
.github/workflows/: _build_and_publish_documentation.yml  main.yml  test.pypi.yml
_autosummary/: ospx.component.Component.html  ospx.component.RemoteAccess.html  ospx.component.html  ospx.connection.Connection.html  ospx.connection.Endpoint.html  ospx.connection.html  ospx.connector.Connector.html  ospx.connector.html  ospx.fmi.experiment.Experiment.html  ospx.fmi.experiment.html  ospx.fmi.fmu.FMU.html  ospx.fmi.fmu.html  ospx.fmi.html  ospx.fmi.unit.BaseUnit.html  ospx.fmi.unit.DisplayUnit.html  ospx.fmi.unit.Unit.html  ospx.fmi.unit.html  ospx.fmi.variable.ScalarVariable.html  ospx.fmi.variable.html  ospx.graph.Graph.html  ospx.graph.html  ospx.importer.OspSystemStructureImporter.html  ospx.importer.html  ospx.ospCaseBuilder.OspCaseBuilder.html  ospx.ospCaseBuilder.html  ospx.ospSimulationCase.OspSimulationCase.html  ospx.ospSimulationCase.html  ospx.simulation.Simulation.html  ospx.simulation.html  ospx.system.System.html  ospx.system.html  ospx.utils.dateTime.html  ospx.utils.dict.html  ospx.utils.html  ospx.utils.logging.html  ospx.utils.plotting.html  ospx.utils.zip.html  ospx.watch.cli.html  ospx.watch.cli.watchCosim.html  ospx.watch.html  (+2 more)
_sources/: cli.watchCosim.rst.txt  fileFormat.watchDict.md.txt  index.rst.txt  ospx.fmi.rst.txt  ospx.ospCaseBuilder.rst.txt
_sources/_autosummary/: ospx.component.Component.rst.txt  ospx.component.RemoteAccess.rst.txt  ospx.component.rst.txt  ospx.connection.Endpoint.rst.txt  ospx.connector.Connector.rst.txt  ospx.fmi.experiment.Experiment.rst.txt  ospx.fmi.experiment.rst.txt  ospx.fmi.fmu.FMU.rst.txt  ospx.fmi.fmu.rst.txt  ospx.fmi.rst.txt  ospx.fmi.unit.BaseUnit.rst.txt  ospx.fmi.unit.rst.txt  ospx.graph.Graph.rst.txt  ospx.importer.OspSystemStructureImporter.rst.txt  ospx.importer.rst.txt  ospx.ospCaseBuilder.OspCaseBuilder.rst.txt  ospx.ospCaseBuilder.rst.txt  ospx.ospSimulationCase.OspSimulationCase.rst.txt  ospx.simulation.Simulation.rst.txt  ospx.system.System.rst.txt  ospx.utils.dict.rst.txt  ospx.utils.plotting.rst.txt  ospx.utils.rst.txt  ospx.watch.cli.rst.txt  ospx.watch.cli.watchCosim.rst.txt  ospx.watch.rst.txt
branch/fmi2_object_model/: .buildinfo  CHANGELOG.html  LICENSE.html  README.html  STYLEGUIDE.html  api.html  cli.html  cli.importSystemStructure.html  cli.ospCaseBuilder.html  cli.watchCosim.html  fileFormat.caseDict.html  fileFormat.html  fileFormat.watchDict.html  genindex.html  index.html  objects.inv  ospx.component.html  ospx.connection.html  ospx.connector.html  ospx.fmi.experiment.html  ospx.fmi.fmu.html  ospx.fmi.html  ospx.fmi.unit.html  ospx.fmi.variable.html  ospx.graph.html  ospx.html  ospx.importer.html  ospx.ospCaseBuilder.html  ospx.ospSimulationCase.html  ospx.simulation.html  ospx.system.html  ospx.systemStructure.html  ospx.watch.html  ospx.watch.watchCosim.html  py-modindex.html  search.html  searchindex.js
branch/main/: .buildinfo  CHANGELOG.html  LICENSE.html  README.html  STYLEGUIDE.html  api.html  cli.html  cli.importSystemStructure.html  cli.ospCaseBuilder.html  cli.watchCosim.html  fileFormat.caseDict.html  fileFormat.html  fileFormat.watchDict.html  genindex.html  index.html  objects.inv  ospx.component.html  ospx.connection.html  ospx.connector.html  ospx.fmi.experiment.html  ospx.fmi.fmu.html  ospx.fmi.html  ospx.fmi.unit.html  ospx.fmi.variable.html  ospx.graph.html  ospx.html  ospx.importer.html  ospx.ospCaseBuilder.html  ospx.ospSimulationCase.html  ospx.simulation.html  ospx.system.html  ospx.systemStructure.html  ospx.watch.html  ospx.watch.watchCosim.html  py-modindex.html  search.html  searchindex.js
branch/release/: .buildinfo  LICENSE.html  README.html  STYLEGUIDE.html  api.html  cli.html  cli.ospCaseBuilder.html  cli.watchCosim.html  fileFormat.caseDict.html  fileFormat.html  fileFormat.watchDict.html  genindex.html  index.html  objects.inv  ospx.html  ospx.ospCaseBuilder.html  ospx.watch.html  ospx.watch.watchCosim.html  py-modindex.html  search.html  searchindex.js
docs/source/: api.rst  cli.importSystemStructure.rst  cli.rst  conf.py  example.caseDict.md  example.watchDict.md  examples.rst  fileFormat.caseDict.md  fileFormat.watchDict.md  fileFormats.rst  index.rst  modules.rst  ospx.cli.rst  ospx.component.rst  ospx.connector.rst  ospx.fmi.experiment.rst  ospx.fmi.rst  ospx.fmi.variable.rst  ospx.rst  ospx.utils.rst  ospx.watch.cli.rst  ospx.watch.rst
src/ospx/: __init__.py  component.py  connection.py  connector.py  fmu.py  graph.py  importer.py  ospCaseBuilder.py  ospSimulationCase.py  simulation.py  system.py  systemStructure.py  variable.py
tests/: .gitignore  conftest.py  demoCaseDict  simulationTemplateDict  test_fmu.py  test_ospCaseBuilder.py  test_ospSimulationCase.py  test_simulation.py  test_utils_dict.py  test_watchCosim.py
tests/fmi2_generateds/: fmi2_api.py  fmi2_api_pp.py  fmi2_sub.py  runGenerateDS.bat
tests/gunnerus-dp/: .gitignore  caseDict_with_hardcoded_start_values  caseDict_with_start_values  paramDict  resetTest.bat
tests/house/: caseDict  paramDict
tests/house-time-step-settings/: caseDict
tests/house_timestepping/: caseDict
tests/ospx_variable_group/: .gitignore  LOSGuidance_OspModelDescription.xml  Vessel_OspModelDescription.xml  caseDict  minimalCaseDict  modules.txt
tests/spring_mass_damper/: resetTest.bat  (+2 more)
(+169 files in other folders)
