[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = [
    "src/ospx",
    "tests",
    ".coveragerc",
    ".editorconfig",
    "pytest.ini",
    "ruff.toml",
    "uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/ospx",
]

[project]
name = "ospx"
version = "0.3.0"
description = "Extension package to farn, adding support to build OSP simulation cases using FMUs."
readme = "README.md"
requires-python = ">= 3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Frank Lumpitzsch", email = "frank.lumpitzsch@dnv.com" },
    { name = "Claas Rostock", email = "claas.rostock@dnv.com" },
]
maintainers = [
    { name = "Claas Rostock", email = "claas.rostock@dnv.com" },
]
keywords = [
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "lxml>=5.2",
    "numpy>=1.26,<2.0",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "graphviz>=0.20",
    "dictIO>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/dnv-opensource/ospx"
Documentation = "https://dnv-opensource.github.io/ospx/README.html"
Repository = "https://github.com/dnv-opensource/ospx.git"
Issues = "https://github.com/dnv-opensource/ospx/issues"
Changelog = "https://github.com/dnv-opensource/ospx/blob/main/CHANGELOG.md"


[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.8.3",
    "pyright>=1.1.390",
    "mypy>=1.11.1",
    "sourcery>=1.22",
    "pre-commit>=3.8",
    "Sphinx>=8.0",
    "sphinx-argparse-cli>=1.17",
    "sphinx-autodoc-typehints>=2.2",
    "sphinxcontrib-mermaid>=1.0.0",
    "myst-parser>=4.0",
    "furo>=2024.8",
    "nbconvert>=7.16",
    "jupyter>=1.0",
    "jupyter-client>=8.6",
    "pandas-stubs>=2.2",
    "types-lxml>=2024.4",
]
native-tls = true
# prerelease = "explicit"


[project.scripts]
ospCaseBuilder = "ospx.cli.ospCaseBuilder:main"
importSystemStructure = "ospx.cli.importSystemStructure:main"
watchCosim = "ospx.watch.cli.watchCosim:main"


[tool.mypy]
plugins = [
    "numpy.typing.mypy_plugin",
]
mypy_path = "stubs"
files = [
    "src",
    "tests",
    "demos",
]
exclude = [
    "^src/folder_to_be_excluded/",
]
check_untyped_defs = true
disable_error_code = [
    "misc",
    "import-untyped",
]


[tool.pyright]
stubPath = "stubs"
include = [
    "src",
    "tests",
    "demos",
]
exclude = [
    "src/folder_to_be_excluded",
]

typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingParameterType = "error"
reportUnknownParameterType = "warning"
reportUnknownMemberType = "warning"                # consider to set to `false` if you work a lot with matplotlib and pandas, which are both not properly typed and known to trigger this warning
reportMissingTypeArgument = "error"
reportPropertyTypeMismatch = "error"
reportFunctionMemberAccess = "warning"
reportPrivateUsage = "warning"
reportTypeCommentUsage = "warning"
reportIncompatibleMethodOverride = "warning"
reportIncompatibleVariableOverride = "error"
reportInconsistentConstructor = "error"
reportOverlappingOverload = "warning"
reportUninitializedInstanceVariable = "warning"
reportCallInDefaultInitializer = "warning"
reportUnnecessaryIsInstance = "information"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportUnusedCallResult = "warning"
reportUnusedExpression = "warning"
reportMatchNotExhaustive = "warning"
reportShadowedImports = "warning"
reportUntypedFunctionDecorator = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "warning"
reportUnnecessaryTypeIgnoreComment = "information"
# Activate the following rules only locally and temporary, i.e. for a QA session.
# (For server side CI they are considered too strict.)
# reportMissingTypeStubs = true
# reportConstantRedefinition = "warning"
# reportImportCycles = "warning"
# reportImplicitStringConcatenation = "warning"
