[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = [
    "src/ospx",
    "tests",
    ".coveragerc",
    ".editorconfig",
    ".pre-commit-config.yaml",
    "manage.py",
    "pyproject.toml",
    "pytest.ini",
    "ruff.toml",
    "uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/ospx",
]

[project]
name = "ospx"
version = "0.3.1"
description = "Extension package to farn, adding support to build OSP simulation cases using FMUs."
readme = "README.md"
requires-python = ">= 3.10, < 3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Frank Lumpitzsch", email = "frank.lumpitzsch@dnv.com" },
    { name = "Claas Rostock", email = "claas.rostock@dnv.com" },
    { name = "Seunghyeon Yoo", email = "seunghyeon.yoo@dnv.com" },
]
maintainers = [
    { name = "Claas Rostock", email = "claas.rostock@dnv.com" },
]
keywords = [
    "farn",
    "OSP",
    "fmi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "lxml>=6.0",
    "numpy>=1.26; python_version < '3.13'",
    "numpy>=2.3; python_version >= '3.13'",
    "pandas>=2.3",
    "matplotlib>=3.10",
    "graphviz>=0.20",
    "dictIO>=0.4.1",
]

[project.urls]
Homepage = "https://github.com/dnv-opensource/ospx"
Documentation = "https://dnv-opensource.github.io/ospx/README.html"
Repository = "https://github.com/dnv-opensource/ospx.git"
Issues = "https://github.com/dnv-opensource/ospx/issues"
Changelog = "https://github.com/dnv-opensource/ospx/blob/main/CHANGELOG.md"


[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-cov>=7.0",
    "ruff>=0.14.3",
    "pyright>=1.1.407",
    "mypy>=1.15",
    "sourcery>=1.40",
    "pre-commit>=4.1",
    "Sphinx>=8.1",
    "sphinx-argparse-cli>=1.19",
    "sphinx-autodoc-typehints>=3.0",
    "sphinxcontrib-mermaid>=1.0.0",
    "myst-parser>=4.0",
    "furo>=2024.8",
    "nbconvert>=7.16",
    "jupyter>=1.1",
    "jupyter-client>=8.6",
    "pandas-stubs>=2.3",
    "types-lxml>=2025.8",
]

[tool.uv]
default-groups = [
    "dev",
]
native-tls = true


[project.scripts]
ospCaseBuilder = "ospx.cli.ospCaseBuilder:main"
importSystemStructure = "ospx.cli.importSystemStructure:main"
watchCosim = "ospx.watch.cli.watchCosim:main"


[tool.mypy]
plugins = [
    "numpy.typing.mypy_plugin",
]
mypy_path = "stubs"
files = [
    "src",
    "tests",
    "demos",
]
exclude = [
    "^src/folder_to_be_excluded/",
]
check_untyped_defs = true
disable_error_code = [
    "misc",
    "import-untyped",
]


[tool.pyright]
stubPath = "stubs"
include = [
    "src",
    "tests",
    "demos",
]
exclude = [
    "src/folder_to_be_excluded",
]

typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingParameterType = "error"
reportUnknownParameterType = "warning"
reportUnknownMemberType = "warning"                # consider to set to `false` if you work a lot with matplotlib and pandas, which are both not properly typed and known to trigger this warning
reportMissingTypeArgument = "error"
reportPropertyTypeMismatch = "error"
reportFunctionMemberAccess = "warning"
reportPrivateUsage = "warning"
reportTypeCommentUsage = "warning"
reportIncompatibleMethodOverride = "warning"
reportIncompatibleVariableOverride = "error"
reportInconsistentConstructor = "error"
reportOverlappingOverload = "warning"
reportUninitializedInstanceVariable = "warning"
reportCallInDefaultInitializer = "warning"
reportUnnecessaryIsInstance = "information"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportUnusedCallResult = "warning"
reportUnusedExpression = "warning"
reportMatchNotExhaustive = "warning"
reportShadowedImports = "warning"
reportUntypedFunctionDecorator = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "warning"
reportUnnecessaryTypeIgnoreComment = "information"
# Activate the following rules only locally and temporary, i.e. for a QA session.
# (For server side CI they are considered too strict.)
# reportMissingTypeStubs = true
# reportConstantRedefinition = "warning"
# reportImportCycles = "warning"
# reportImplicitStringConcatenation = "warning"
