[metadata]
name = ospx
version = 0.2.12
summary = Extension package to farn, adding support to build OSP simulation cases using FMUs
description = Extension package to farn <https://pypi.org/project/farn>, adding support to build OSP <https://open-simulation-platform.github.io> (co-)simulation cases using functional mockup units (FMUs).
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://dnv-opensource.github.io/ospx/README.html
project_urls =
    GitHub = https://github.com/dnv-opensource/ospx
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
platform = Python3.x
readme_file = README.md
author = Frank Lumpitzsch
author_email = "Frank Lumpitzsch" <frank.lumpitzsch@dnv.com>
maintainer = Claas Rostock
maintainer_email = "Claas Rostock" <claas.rostock@dnv.com>

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    lxml>=4.9
    numpy>=1.26
    pandas>=2.1
    matplotlib>=3.8
    graphviz>=0.20
    dictIO>=0.3.1
    # dictIO @ file:../dictIO

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
console_scripts =
    ospCaseBuilder = ospx.cli.ospCaseBuilder:main
    importSystemStructure = ospx.cli.importSystemStructure:main
    watchCosim = ospx.watch.cli.watchCosim:main

[coverage:run]
source = ospx
branch = True

[coverage:report]
fail_under = 35.0
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/ospx
    */site-packages/ospx

[tox:tox]
isolated_build = True
envlist = py{39,310,311,312}-{linux,macos,windows}
# envlist = py{39,310,311,312}-{windows}
# envlist = py{39,310,311,312}

[testenv]
system_site_packages = True
deps =
    pytest>=7.4
    pytest-cov>=4.1
commands =
    pytest --cov --cov-config setup.cfg {posargs}
